Bug 484420 - Monochromatic icons in system tray not always used
Summary: Monochromatic icons in system tray not always used
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-24 21:23 UTC by Iyán M. V.
Modified: 2024-06-25 07:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05.2
Sentry Crash Report:


Attachments
KMail with monochromatic icon with unread emails (67.33 KB, image/png)
2024-03-24 21:23 UTC, Iyán M. V.
Details
KMail with colorful icon with all emails read (92.42 KB, image/png)
2024-03-24 21:23 UTC, Iyán M. V.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Iyán M. V. 2024-03-24 21:23:03 UTC
Created attachment 167718 [details]
KMail with monochromatic icon with unread emails

SUMMARY
Several apps, such as KMail or Konversation, use the colorful icons in the system tray when there are no new emails or notifications, but they change to the monochromatic version when they change status.

I hope this is not intentional and it's a regression form KF5 -> KF6, because it looks super weird to have icons change style depending on the status. Also, if that's on purpose, I think it should be the other way around, since the color version brings more attention to the user than the monochromatic one.

I attach two screenshots where you can see "this bug" affecting the KMail icon. Unfortunately, I forgot to take a screenshot with Konversation in the other status, but I guess it's easy to reproduce.

By the way, I can observe the issue both with Qt 6.6 and Qt 6.7.

STEPS TO REPRODUCE
1. Open KMail
2. Mark any email as unread

OBSERVED RESULT
Switch between colorful and monochromatic icons

EXPECTED RESULT
Monochromatic icons should always be used in the system tray

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.8.1-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 7900X3D 12-Core Processor
Memory: 93.5 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XT
Manufacturer: ASUS
Comment 1 Iyán M. V. 2024-03-24 21:23:35 UTC
Created attachment 167719 [details]
KMail with colorful icon with all emails read
Comment 2 Nate Graham 2024-03-27 16:45:49 UTC
These are all app issues in Plasma 6. The apps need to ask for an icon with "-symbolic" appended to the end for their tray icons for all states (not just some states, or no states--which leaves it up to the whims of the icon theme). See how this was done already for KTeaTime: https://invent.kde.org/utilities/kteatime/-/merge_requests/16/

Moving to KMail. Konversation should probably get its own bug report.
Comment 3 Laurent Montel 2024-03-28 05:59:10 UTC
Git commit ed6d4274b4b1b1064625d3e064874c7ade666724 by Laurent Montel.
Committed on 28/03/2024 at 05:58.
Pushed by mlaurent into branch 'release/24.02'.

Fix bug 484420:  Monochromatic icons in system tray not always used
FIXED-IN: 24.02.2

M  +1    -1    src/kmsystemtray.cpp

https://invent.kde.org/pim/kmail/-/commit/ed6d4274b4b1b1064625d3e064874c7ade666724
Comment 4 Iyán M. V. 2024-03-28 12:49:08 UTC
Alright, good to know, thanks!

I created a similar one line fix to Konversation. It works locally, but please double check:
https://invent.kde.org/network/konversation/-/merge_requests/99
Comment 5 Carl Schwan 2024-06-25 07:42:46 UTC
Git commit fb71ff80eb1f772aeeb33753822f0bae32545301 by Carl Schwan, on behalf of Iyán Méndez Veiga.
Committed on 25/06/2024 at 07:38.
Pushed by carlschwan into branch 'master'.

Fix bug 484420: Monochromatic icons in system tray not always used
FIXED-IN: 24.05.2

See also:
pim/kmail@ed6d4274
utilities/kteatime!16 (5052fc8a)

M  +1    -1    src/viewer/trayicon.cpp

https://invent.kde.org/network/konversation/-/commit/fb71ff80eb1f772aeeb33753822f0bae32545301