Fix bug 484420: Monochromatic icons in system tray not always used

BUG: 484420
FIXED-IN: 24.05.2

See also:
pim/kmail@ed6d4274
utilities/kteatime!16 (5052fc8a)